# eventio

./: CHANGELOG.md  Cargo.toml  LICENSE  README.md
.github/workflows/: ci.yml
examples/: kafka.rs
src/: fluentd.rs  kafka.rs  lib.rs  mbox.rs  ndarray.rs  pcap.rs  pipeline.rs  text.rs
