[package]
name = "eventio"
version = "0.11.0"
authors = ["Min Kim <msk@dolbo.net>", "Min Shao <min.shao1988@gmail.com>"]
edition = "2021"
rust-version = "1.68"
description = "A collection of event I/O processors for event-processing applications."
documentation = "https://docs.rs/eventio"
readme = "README.md"
homepage = "https://github.com/petabi/eventio"
repository = "https://github.com/petabi/eventio"
license = "Apache-2.0"
exclude = ["/.github"]

[badges]
codecov = { repository = "petabi/eventio", service = "github" }

[features]
default = []
ndarray = ["dep:ndarray"]
kafka = ["dep:kafka"]
pcap = ["pcap-parser"]

[dependencies]
crossbeam-channel = "0.5"
kafka = { version = "0.10", default-features = false, optional = true }
ndarray = { version = "0.16", optional = true }
nom = "7"
pcap-parser = { version = "0.16", features = [
    "data",
    "serialize",
], optional = true }
rmp-serde = "1"
serde = { version = "1", features = ["derive"] }
serde_bytes = "0.11"

[[example]]
name = "kafka"
required-features = ["kafka"]
